--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{repo.toString()}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@{String.valueOf(repo.htmlUrl)}"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/button" />-->
 
         <Button
             android:id="@+id/button"
@@ -45,5 +45,66 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+
+        <TextView
+            android:id="@+id/idLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/title"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
+
+        <TextView
+            android:text="ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/urlLabel"
+            app:layout_constraintTop_toBottomOf="@+id/idLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"/>
+        <TextView
+            android:text="URL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/deskripsiUrl"
+            app:layout_constraintTop_toBottomOf="@+id/urlLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"/>
+        <TextView
+            android:text="Deskripsi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/deskripsiLabel"
+            app:layout_constraintTop_toBottomOf="@+id/deskripsiUrl"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"/>
+        <TextView
+            android:text="@{String.valueOf(repo.id)}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/idText"
+            app:layout_constraintStart_toEndOf="@+id/urlLabel"
+            android:layout_marginStart="136dp"
+            app:layout_constraintTop_toTopOf="@+id/urlLabel"/>
+        <TextView
+            android:text="@{repo.htmlUrl}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/urlText"
+            app:layout_constraintTop_toTopOf="@+id/deskripsiUrl"
+            app:layout_constraintStart_toStartOf="@+id/idText"/>
+        <TextView
+            android:text="@{repo.description}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/deskripsiText"
+            app:layout_constraintStart_toStartOf="@+id/urlText"
+            app:layout_constraintTop_toTopOf="@+id/deskripsiLabel"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
